--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
-spring.profiles.active=test
+#spring.profiles.active=test
 paginacao.qtd_por_pagina=25
+
+#configurações mysql
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/flyway
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=25
+
+#alteracao da porta do tomcat
+server.port=8095
+spring.security.user.name=user
+spring.security.user.password=1234
