--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ paginacao.qtd_por_pagina=25
 #configurações mysql
 #spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/flyway
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:mysql://localhost:3306/flyway
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.datasource.hikari.maximum-pool-size=25
 
