--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.hikari.maximum-pool-size=25
 server.port=8095
 spring.security.user.name=user
 spring.security.user.password=1234
+
+#configuracao mongodb
+spring.data.mongodb.database=spring-mongodb
